# tech_analyze

./: .gitignore  README.md  data_processing.py  financial_metrics.py  get_NAV_data.py  helper.py  historical_calc.py  main.py  optimize.md  pyproject.toml  summary_manager.py
analyzer/: correlation.py  data_processing.py  financial_metrics.py  historical_calc.py  main.py  summary_manager.py  usage.md
optimize_metric_generation/: optimize_config.py  optimize_functions.py  optimize_metric_generation.py  plot_thresholds.py
