[project]
name = "tech-analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==24.3.0",
    "autopep8==2.3.2",
    "avanza-api==15.1.1",
    "beautifulsoup4==4.12.3",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "currencyconverter==0.18.2",
    "cycler==0.12.1",
    "fonttools==4.55.3",
    "forex-python==1.8",
    "frozendict==2.4.6",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "kiwisolver==1.4.7",
    "lxml==5.3.0",
    "matplotlib==3.10.0",
    "multitasking==0.0.11",
    "numpy==2.2.0",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pandas==2.2.3",
    "peewee==3.17.8",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "pycodestyle==2.12.1",
    "pydantic==2.10.2",
    "pydantic-core==2.27.1",
    "pyotp==2.9.0",
    "pyparsing==3.2.0",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "requests==2.32.3",
    "scipy==1.16.1",
    "seaborn==0.13.2",
    "selenium==4.27.1",
    "simplejson==3.19.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "tabulate==0.9.0",
    "tqdm==4.67.1",
    "trio==0.27.0",
    "trio-websocket==0.11.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==14.1",
    "wsproto==1.2.0",
    "yfinance==0.2.54",
]
